--- a/src/App.css
+++ b/src/App.css
@@ -69,12 +69,12 @@ body {
     border-radius: .5rem;
   }
 
-  .active-btn {
+  /* .active-btn {
     background: rgb(9, 177, 244);
     color: #fff;
     border-radius: 50%;
-    /* padding: 1rem; */
-  }
+     padding: 1rem; 
+  } */
 
   .link-btn {
     text-decoration: none;
